k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tech-store
  labels:
    app.kubernetes.io/part-of: tech-store
