k8s/20-sales-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-service
  namespace: tech-store
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: sales-service
  template:
    metadata:
      labels:
        app: sales-service
    spec:
      containers:
        - name: sales-service
          image: YOUR_DOCKERHUB_USER/sales-service:1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8082
