k8s/03-database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: lab-app
spec:
  serviceName: "database"
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: postgres
        image: postgres:14-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: lab-app
spec:
  ports:
  - port: 5432
  selector:
    app: database
  clusterIP: None # Headless service para el StatefulSet
