k8s/04-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: tech-store
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
