k8s/05-sales-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-service
  namespace: lab-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sales-service
  template:
    metadata:
      labels:
        app: sales-service
    spec:
      containers:
      - name: sales-service
        image: <TU_REGISTRY>/sales-service:latest # ¡Actualizar con la URI del ECR o Docker Hub!
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sales-service
  namespace: lab-app
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: sales-service
