k8s/11-inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: tech-store
spec:
  type: ClusterIP
  selector:
    app: inventory-service
  ports:
    - name: http
      port: 8081
      targetPort: http
