k8s/21-sales-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sales-service
  namespace: tech-store
spec:
  type: ClusterIP
  selector:
    app: sales-service
  ports:
    - name: http
      port: 8082
      targetPort: http
