k8s/31-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: tech-store
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
    - name: http
      port: 8080
      targetPort: http
