k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-ingress
  namespace: lab-app
  annotations:
    # Usando NGINX Ingress Controller. Si usas AWS ALB Ingress Controller, 
    # las anotaciones deberán cambiarse a alb.ingress.kubernetes.io/*
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/inventory(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: inventory-service
            port:
              number: 80
      - path: /api/sales(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: sales-service
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: web-app
            port:
              number: 80
